--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8"/>
   <title>Pokedex</title>
 
-  <base href="https://jpotel38.github.io/pokedex/"/>
+  <base href="/"/>
 
   <meta content="light dark" name="color-scheme"/>
   <meta
