--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
   <app-root></app-root>
-  <script type="text/javascript" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 <script src="runtime.731dd6de9a848520.js" type="text/javascript"></script><script src="polyfills.3f42365890fdbe75.js" type="text/javascript"></script><script src="main.40532ea257112074.js" type="text/javascript"></script>
 
